--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,16 @@ html {
 }
 
 #header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   height: 46px;
   background-color: black;
+}
+
+#nav {
+  display: inline-block;
 }
 
 #nav,
@@ -41,9 +49,8 @@ html {
   position: relative;
 }
 
-#nav li:hover .subnav{
+#nav li:hover .subnav {
   display: block;
-  
 }
 
 /* lấy tất cả thẻ a là con trực tiếp của thẻ li là con trực tiếp của #nav */
@@ -61,7 +68,8 @@ html {
 
 /* nếu hover vào thẻ a -> gặp lỗi khi hover vào các thẻ a con sẽ bị mất active ở thẻ đc chọn*/
 #nav > li:hover > a, /*hover cho các thẻ li cha*/
-#nav .subnav li:hover { /*hover cho các thẻ li của thẻ subnav (con của nav)*/
+#nav .subnav li:hover {
+  /*hover cho các thẻ li của thẻ subnav (con của nav)*/
   color: black;
   background-color: #ccc;
 }
@@ -80,6 +88,26 @@ html {
   color: #000;
   padding: 0 12px;
   line-height: 38px;
+}
+
+#nav .nav-arrow-down {
+  font-size: 14px;
+}
+
+#header .search-btn {
+  float: right;
+  padding: 0 24px;
+  cursor: pointer;
+}
+
+#header .search-btn:hover {
+  background-color: #f44336;
+}
+
+#header .search-icon {
+  color: #fff;
+  font-size: 20px;
+  line-height: 46px;
 }
 
 #slider {
