--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ html {
   height: 46px;
   background-color: black;
   z-index: 1; /*tăng độ nổi cho #header*/
+  overflow: hidden;
 }
 /* common */
 .clear {
@@ -170,13 +171,14 @@ html {
   font-size: 14px;
 }
 
+
 #header .search-btn {
   float: right;
   padding: 0 24px;
-  cursor: pointer;
 }
 
 #header .search-btn:hover {
+  cursor: pointer;
   background-color: #f44336;
 }
 
@@ -185,6 +187,27 @@ html {
   font-size: 20px;
   line-height: 46px;
 }
+
+#header .mobile-menu-btn{
+  display: none;
+  float: right;
+  color: #000;
+  padding: 0 24px;
+}
+
+#header .mobile-menu-btn:hover {
+  background-color: #ccc;
+}
+
+#header .mobile-menu-btn:hover .menu-icon{
+  color: #000;
+}
+#header .menu-icon {
+  color: #fff;
+  font-size: 20px;
+  line-height: 46px;
+}
+
 
 #slider {
   position: relative;
@@ -223,7 +246,7 @@ html {
 }
 
 #content .content-section {
-  width: 800px;
+  width: 800px; /**/
   padding: 64px 16px;
   margin-left: auto;
   margin-right: auto;
@@ -367,6 +390,10 @@ html {
   outline: none; /*bỏ đường viên khi click vào input trên trình duyệt*/
 }
 
+#contact .btn-form-control {
+  width: 72px;
+}
+
 .map-section img {
   width: 100%;
 }
@@ -403,23 +430,4 @@ html {
 .mobile {
   font-size: 68px;
   display: none;
-}
-/*Break point*/
-/*pc*/
-@media (min-width: 1024px) {
-  .pc {
-    display: block;
-  }
-}
-/*tablet*/
-@media (min-width: 740px) and (max-width: 1023px) {
-  .tablet {
-    display: block;
-  }
-}
-/*mobile*/
-@media (max-width: 730px) {
-  .mobile {
-    display: block;
-  }
 }
