--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,23 +6,66 @@
   }
 }
 /*tablet*/
-@media (min-width: 740px) and (max-width: 1023px) {
+@media (min-width: 741px) and (max-width: 1023px) {
   #content .content-section {
-    /*do màn hình tablet nhỏ hơn 800px(kích thước của contect-section màn pc -> đjăt width 100% để khi thu nhỏ về màn tablet thì độ rộng của màn cx thu nhỏ theo*/
-    width: 100%;
   }
 }
+
 /*mobile*/
 @media (max-width: 740px) {
+  .s-full-width,
+  .s-col-full {
+    width: 100% !important;
+  }
+
+  .s-mt-8 {
+    margin-top: 8px !important;
+  }
+  #nav {
+    display: block;
+  }
+
   #nav li {
     display: block;
+  }
+
+  #nav li:first-child {
+    display: inline-block; /*chỉ đặt thẻ li đầu tiên là inline-block*/
+  }
+
+  #nav .subnav {
+    /*trên màn hình mobile k cần đặt position: absolute*/
+    position: initial; /*giá trị mặc đinh của position*/
+    background: #333;
+  }
+
+  #nav .subnav a {
+    color: #fff;
+    padding: 5px 36px;
+  }
+
+  #header {
+    overflow: hidden;
   }
 
   #header .search-btn {
     display: none;
   }
 
-  #header .mobile-menu-btn{
+  #header .mobile-menu-btn {
     display: block;
   }
+
+  #content .member-img {
+    width: 60%;
+  }
+
+  .contact-form {
+    margin-top: 16px;
+  }
+
+  /* .btn{
+    width: 100%;
+    text-align: center;
+  } */
 }
