--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,6 @@ html {
   height: 46px;
   background-color: black;
   z-index: 1; /*tăng độ nổi cho #header*/
-  overflow: hidden;
 }
 /* common */
 .clear {
@@ -78,6 +77,10 @@ html {
   margin-top: 16px !important;
 }
 
+.mt-32 {
+  margin-top: 32px !important;
+}
+
 /*sử dụng thay cho class clear*/
 .row::after {
   content: "";
@@ -97,6 +100,8 @@ html {
   text-decoration: none;
   line-height: 38px;
   border: none;
+  width: 100%;
+    text-align: center;
 }
 
 .btn:hover {
@@ -171,7 +176,6 @@ html {
   font-size: 14px;
 }
 
-
 #header .search-btn {
   float: right;
   padding: 0 24px;
@@ -188,18 +192,21 @@ html {
   line-height: 46px;
 }
 
-#header .mobile-menu-btn{
+#header .mobile-menu-btn {
   display: none;
   float: right;
   color: #000;
   padding: 0 24px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 #header .mobile-menu-btn:hover {
   background-color: #ccc;
 }
 
-#header .mobile-menu-btn:hover .menu-icon{
+#header .mobile-menu-btn:hover .menu-icon {
   color: #000;
 }
 #header .menu-icon {
@@ -207,7 +214,6 @@ html {
   font-size: 20px;
   line-height: 46px;
 }
-
 
 #slider {
   position: relative;
@@ -247,6 +253,7 @@ html {
 
 #content .content-section {
   width: 800px; /**/
+  max-width: 100%;
   padding: 64px 16px;
   margin-left: auto;
   margin-right: auto;
@@ -329,7 +336,7 @@ html {
 
 /*Place*/
 .places-list {
-  margin-top: 32px;
+  margin-top: 16px;
   margin-bottom: 48px;
 }
 
